# smart-kitchen-safety-system

./: README.md  pyproject.toml  setup.sh
photos/person/adult/: 7.jfif
