[tool.poetry]
name = "smart-kitchen-safety-system"
version = "0.1.0"
description = ""
authors = ["sriram161 <k.sriramsagar@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"
pillow = "^7.2.0"
numpy = "^1.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
